# clauth

./: .gitignore  .slopcat.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  install.sh
.agent/: GOAL-PROMPT.md  PROGRESS.md  TECH-PLAN.md
.claude-plugin/: marketplace.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  bug_report_agent.yml  config.yml  enhancement.yml  feature_request.yml  feature_request_agent.yml
.github/PULL_REQUEST_TEMPLATE/: agent.md
.github/workflows/: ci.yml  release.yml
clauth-plugin/hooks/: hooks.json
docs/: daemon.md
docs/ccsbar/: CBAR-4-DESIGN.md  CBAR-4-PLAN.md  DESIGN.md  UX-RESEARCH.md
docs/cla-feed/: DESIGN.md
docs/claude-split/: README.md
docs/codex-support/: PLAN.md  feasibility.md  proxy-design.md
docs/fork-sync/: SYNC.md
plugins/.claude-plugin/: plugin.json
scripts/codex-sim/: make_auth.py  proxy-client-integration.sh  run.sh
src/: actions.rs  claude.rs  claude_json.rs  cli.rs  completions.rs  fallback.rs  fallback_config.rs  format.rs  jsonsync.rs  keychain.rs  lock.rs  lockorder.rs  logline.rs  loopback.rs  main.rs  menu.rs  oauth.rs  oauth_login.rs  platform.rs  plugin_probe.rs  poll.rs  pricing.rs  profile.rs  profile_cache.rs  profile_json.rs  runtime.rs  sessions.rs  sessions_cli.rs  settings_sync.rs  showcase.rs  spinner.rs  start.rs  status.rs  testutil.rs  throughput.rs  token_ledger.rs  tokens.rs  ui.rs  update.rs  ureq_error.rs  (+2 more)
src/codex/: auth.rs  login.rs  mod.rs  oauth.rs  poll.rs  usage.rs
src/daemon/: log_rotate.rs  mod.rs  probe.rs  socket.rs  status_json.rs  tick.rs  tokens_snapshot.rs  types.rs  waker.rs
src/doctor/: core.rs  mod.rs
src/mcp/: jobs.rs  mod.rs  render.rs
src/providers/: deepseek.rs  generic.rs  mod.rs  zai.rs
src/proxy/: http.rs  mod.rs  pool.rs  sse.rs
src/tui/: app.rs  mod.rs  theme.rs
src/tui/render/: banner.rs  chain.rs  config.rs  detail.rs  footer.rs  format.rs  global_config.rs  header.rs  mod.rs  modals.rs  overview.rs  panes.rs  plugin.rs  status.rs  tabs.rs  toasts.rs  tokens.rs  usage.rs
src/usage/: burn.rs  fetch.rs  mod.rs  scheduler.rs
tests/fixtures/: incidents.json
tests/inline/: actions.rs  burn.rs  claude.rs  claude_json.rs  cli.rs  codex.rs  codex_actions.rs  codex_auth.rs  codex_login.rs  codex_oauth.rs  codex_poll.rs  codex_usage.rs  completions.rs  daemon_log_rotate.rs  daemon_mod.rs  daemon_probe.rs  daemon_socket.rs  daemon_status_json.rs  daemon_watchdog.rs  doctor.rs  fallback.rs  fallback_config.rs  feature_coverage.rs  fetch.rs  format.rs  keychain.rs  learned_cadence.rs  lock.rs  lockorder.rs  logline.rs  mcp_jobs.rs  mcp_render.rs  mcp_run.rs  mcp_switch.rs  mcp_switch_tool.rs  oauth.rs  oauth_login.rs  plugin_probe.rs  poll.rs  pricing.rs  (+36 more)
wiki/: daemon.md
