[package]
name = "clauth"
version = "0.7.1"
edition = "2024"
description = "Manage multiple Claude Code accounts, monitor 5h/7d usage with configurable auto-switch and delegation with an MCP plugin. CLI + TUI."
license = "MIT"
repository = "https://github.com/uwuclxdy/clauth"
homepage = "https://github.com/uwuclxdy/clauth"
readme = "README.md"
keywords = ["claude-code", "account-switcher", "usage-monitor", "mcp", "anthropic"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm", "macros", "all-widgets", "underline-color"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
toml = "1.1.2"
anyhow = "1.0.103"
dirs = "6.0.0"
ureq = "3.3.0"
self-replace = "1.5.0"
signal-hook = "0.4.4"
tempfile = "3.27.0"
libc = "0.2.186"
sha2 = "0.11.0"
minisign-verify = "0.2.5"
rmcp = { version = "2.0.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt", "io-std"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
