[package]
name = "clauth"
version = "0.13.1"
edition = "2024"
description = "Manage multiple Claude Code accounts, monitor 5h/7d usage with configurable auto-switch and delegation with an MCP plugin. CLI + TUI."
license = "MIT"
repository = "https://github.com/uwuclxdy/clauth"
homepage = "https://github.com/uwuclxdy/clauth"
readme = "README.md"
keywords = ["claude-code", "account-switcher", "usage-monitor", "mcp", "anthropic"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm", "layout-cache", "underline-color"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
toml = "1.1.2"
anyhow = "1.0.103"
dirs = "6.0.0"
ureq = "3.3.0"
self-replace = "1.5.0"
signal-hook = "0.4.4"
tempfile = "3.27.0"
libc = "0.2.186"
sha2 = "0.11.0"
minisign-verify = "0.2.5"
# CSPRNG bytes for the OAuth PKCE code_verifier + state (already in the tree
# transitively; pinned here as a direct dep). No unsafe in our crate.
getrandom = "0.4.3"
# Echo-off prompt for the API key in `clauth login --base-url/--api-key`, so the
# key never routes through argv / shell history / process listings. Cross-
# platform; no transitive deps beyond libc (already in the tree).
rpassword = "7"
# Local wall-clock stamps on the TUI's reset countdowns (`resets in 40m
# (21:20)`, issue #39) — std has no timezone. chrono already compiles in the
# tree via rmcp → schemars; only the `clock` feature is new, which adds
# `iana-time-zone` for the zone lookup. Its `unsafe` stays inside chrono.
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
rmcp = { version = "2.1.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.52.3", features = ["rt", "io-std"] }
regex = "1.13.1"
# CLI grammar + generated help. `wrap_help` is what keeps the command table and
# the per-subcommand prose wrapping to the real terminal width instead of the
# hand-padded block it replaced; it adds only `terminal_size` (rustix is already
# in the tree via crossterm).
clap = { version = "4.6.4", features = ["derive", "wrap_help"] }

# npm installs `claude` as a `.cmd` shim that Rust's bare `Command::new` can't
# resolve (no PATHEXT search); `which` finds it. Unix uses a bare lookup.
[target.'cfg(windows)'.dependencies]
which = "8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
